--- a/Insertion Sort/.classpath
+++ b/Insertion Sort/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="H:/Java/Libraries/BreezySwing.jar"/>
+	<classpathentry kind="lib" path="/Users/michael/Documents/DEVELOPMENT/java/externals/BreezySwing.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
